# weather-information-service/docs/OpenApi.yaml
@@ -16,6 +16,43 @@ paths:
         - Weather information
       summary: Add weather data for a city
       operationId: addWeatherData
+      description: API to create weather record for a city.
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/weatherAddData'
+      responses:
+        '200':
+          description: Weather data added successfully.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/weatherDataCreateResponse'
+        '400':
+          $ref: '#/components/responses/400BadRequest'
+    get:
+      tags:
+        - Weather information
+      summary: Get weather data for all cities
+      operationId: getAllWeatherData
+      description: API to fetch all weather records.
+      responses:
+        '200':
+          description: Fetch weather data.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/weatherDataGetResponse'
+        '404':
+          $ref: '#/components/responses/404NotFound'
+    put:
+      tags:
+        - Weather information
+      summary: Edit weather data for a city.
+      operationId: editWeatherData
+      description: API to edit weather data of a city. If city is not present, it will create new weather record for the city.
       requestBody:
         required: true
         content:
@@ -33,39 +70,13 @@ paths:
           $ref: '#/components/responses/400BadRequest'
         '404':
           $ref: '#/components/responses/404NotFound'
-        '422':
-          $ref: '#/components/responses/422UnprocessableEntity'
-    get:
-      tags:
-        - Weather information
-      summary: Get weather data for all cities
-      operationId: getAllWeatherData
-      parameters:
-        - name: date
-          in: query
-          description: Date
-          required: true
-          schema:
-            type: string
-            format: date
-            pattern: "DD/MM/YYYY"
-      responses:
-        '200':
-          description: Fetch weather data.
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/weatherDataGetResponse'
-        '404':
-          $ref: '#/components/responses/404NotFound'
-        '422':
-          $ref: '#/components/responses/422UnprocessableEntity'
   /cities/{city}:
     get:
       tags:
         - Weather information
       summary: Get weather data for a specific city
-      operationId: getWeatherData
+      operationId: getCityWeatherData
+      description: API to fetch all weather records for requested city.
       parameters:
         - name: city
           in: path
@@ -78,7 +89,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/weatherDataGetResponse'
+                $ref: '#/components/schemas/cityWeatherDataGetResponse'
         '404':
           $ref: '#/components/responses/404NotFound'
 components:
@@ -106,14 +117,26 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/weatherGetData'
+    
+    cityWeatherDataGetResponse:
+      type: object
+      required:
+        - success
+        - result
+      properties:
+        success:
+          type: boolean
+        result:
+          $ref: '#/components/schemas/weatherGetData'
             
     weatherAddData:
       type: object
+      required:
+        - city
       properties:
         city:
           type: string
           example: "Auckland"
-        
         temp:
           type: number
           example: 19.1
@@ -135,28 +158,23 @@ components:
         city:
           type: string
           example: "Auckland"
-        weatherInfo:
-          type: array
-          items:
-            type: object
-            properties:
-              temp:
-                type: number
-                example: 35.1
-              unit:
-                type: string
-                example: "C"
-              weather:
-                type: string
-                enum:
-                  - "Sunny"
-                  - "Cloudy"
-                  - "Rainy"
-                  - "Snow"
-                  - "Thunderstorm"
-              dateTime:
-                type: string
-                example: "2020-10-09T15:45:00Z"
+        temp:
+          type: number
+          example: 35.1
+        unit:
+          type: string
+          example: "C"
+        weather:
+          type: string
+          enum:
+            - "Sunny"
+            - "Cloudy"
+            - "Rainy"
+            - "Snow"
+            - "Thunderstorm"
+        dateTime:
+          type: string
+          example: "2020-10-09T15:45:00Z"
   responses:
     400BadRequest:
       description: Bad request - Bad request parameters.
@@ -169,10 +187,8 @@ components:
                 type: boolean
                 default: false
               error:
-                type: array
-                items:
-                  type: object
-                  properties:
+                type: object
+                properties:
                     trace:
                       type: string
                     code:
@@ -182,10 +198,9 @@ components:
                     status:
                       type: string
                 example:
-                  - trace: 0681f13a-445c-470c-84a7-c5108734f355
-                    code: 400003
-                    message: Incorrect request parameters
-                    status: Bad request
+                  code: 400001
+                  message: Incorrect request parameters
+                  status: Bad request
     404NotFound:
       description: Resource not found
       content:
@@ -197,10 +212,8 @@ components:
                 type: boolean
                 default: false
               error:
-                type: array
-                items:
-                  type: object
-                  properties:
+                type: object
+                properties:
                     trace:
                       type: string
                     code:
@@ -210,36 +223,6 @@ components:
                     status:
                       type: string
                 example:
-                  - trace: be45687c-57f2-46e8-8717-32b3153a5886
-                    code: 404001
-                    message: Resource not found
-                    status: Not found
-    422UnprocessableEntity:
-      description: Unprocessable Entity. Problem with the Request.
-      content:
-        application/json:
-          schema:
-            type: object
-            properties:
-              success:
-                type: boolean
-                default: false
-              error:
-                type: array
-                items:
-                  type: object
-                  properties:
-                    trace:
-                      type: string
-                    code:
-                      type: integer
-                    message:
-                      type: string
-                    status:
-                      type: string
-                example:
-                  - trace: be45687c-57f2-46e8-8717-32b3153a5886
-                    code: 422002
-                    message: Unprocessable Entity
-                    status: Unprocessable Entity
-    
+                  code: 404001
+                  message: Resource not found
+                  status: Not found
