# weather-information-service/src/main/java/com/example/weatherinformationservice/model/entities/CityWeather.java
@@ -1,0 +1,26 @@
+package com.example.weatherinformationservice.model.entities;
+
+import java.math.BigDecimal;
+import java.sql.Timestamp;
+
+import jakarta.persistence.*;
+import lombok.Getter;
+import lombok.Setter;
+
+@Entity
+@Getter
+@Setter
+public class CityWeather {
+    
+    @Id
+    private String name;
+
+    private BigDecimal temp;
+
+    private char unit;
+
+    private String weather;
+
+    @Temporal(TemporalType.TIMESTAMP)
+    private Timestamp dateTime;
+}
